# agentic-ai-sneha

./: README.md
ai-learning-coach/: NEXT_SESSION_HANDOFF.md  pyproject.toml
ai-learning-coach/data/competency_model/: archetypes.yaml  build_suggestions.yaml  evidence_signals.yaml  skills.yaml
ai-learning-coach/src/compass/: __init__.py  _data.py  cli.py  config.py  models.py
ai-learning-coach/src/compass/agent/: coach.py  curriculum.py  narrative.py  orchestrator.py  planner.py
ai-learning-coach/src/compass/competency/: assessor.py  corrections.py
ai-learning-coach/src/compass/evidence/: aggregator.py  llm_assessor.py  repo_dates.py  scanner.py
ai-learning-coach/tests/: conftest.py  test_coach.py  test_coach_llm.py  test_learner_coach.py
course-rag/: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml  splitter.py
course-rag/1_preprocessing/: README.md  cleaner.py  preprocess.py
course-rag/1_preprocessing/loaders/: config.py  pdf_loader.py  transcript_chapter_loader.py  transcript_loader.py  web_loader.py
course-rag/2_chunking/: run_chunking.py  splitter_config.py
course-rag/3_embeddings/: embedder_config.py  run_embeddings.py
course-rag/4_retrieval/: bm25_normalizer.py  build_bm25_chunks.py  build_comparison_csv.py  query_rewriter.py  reranker_config.py  retriever_config.py  run_eval.py  run_force_include_check.py  run_rag_eval.py  run_ragas_eval.py  run_rerank_diagnostic.py  run_rerank_generation_check.py  run_retrieval.py  run_rewrite_diagnostic.py  run_rewrite_generation_compare.py
course-rag/5_chat/: app.py  generator.py  run_app.py  run_chat.py
course-rag/data/: course_structure.yaml  urls.txt
docs/: _config.yml  index.md
(+25 files in other folders)
