[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-builder-compass"
version = "0.1.0"
description = "Personalized AI learning roadmap powered by evidence from your repos"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "openai>=1.0",
]

[project.scripts]
compass = "compass.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/compass"]
