[project]
name = "course-rag"
version = "0.1.0"
description = "RAG system for Mastering Agentic AI course material"
requires-python = ">=3.9"
dependencies = [
    # Stage 1 — Preprocessing
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "pdfplumber>=0.11",
    "pypdf>=4.0",
    "trafilatura>=1.12",
    "lxml-html-clean>=0.4",
    "python-dotenv>=1.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
embeddings = [
    # Stage 3 — Embeddings
    "langchain-chroma>=0.1",
    "langchain-openai>=0.2",
    "langchain-huggingface>=0.1",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    # Stage 4 — RAGAS evaluation
    # ragas 0.4.3 hard-imports langchain_community.chat_models.vertexai, which
    # was removed in langchain-community 0.4; pin <0.4 to keep that import working.
    "ragas>=0.4",
    "langchain-community<0.4",
]
chat = [
    # Stage 3 — Generation & UI
    "langchain-anthropic>=0.3",
    "anthropic>=0.40",
    "streamlit>=1.40",
]

[tool.uv]
package = false
